js/js.translator/testData/incremental/invalidation/enum/main/testEnumEntries.0.kt
@kotlin.ExperimentalStdlibApi
fun testEnumEntries(stepId: Int): Boolean {
    return true
}
